moved navlinks to the right in navbar

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="h-100">
     <head>
-        <title>Josefine Kihlström</title>
+        <title>Josefine Kihlström - Junior Full Stack Developer</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
@@ -14,12 +14,12 @@
         <header>
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Josefine Kihlström<large class="brand-name">.</large></a>
+                  <a class="navbar-brand font-weight-bold" href="#">Josefine Kihlström<large class="brand-name">.</large></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
+                    <div class="navbar-nav right ml-auto">
                       <a class="nav-link nav-hover" href="#about-me">About Me</a>
                       <a class="nav-link nav-hover" href="#skills">Skills</a>
                       <a class="nav-link nav-hover" href="#work-edu">Work/Education</a>
@@ -303,7 +303,7 @@
             <div class="container footer-container">
                 <div class="row no-gutters">
                     <div class="col-md-5 pt-5 pb-5 pl-5">
-                        <p class="text-uppercase font-weight-bold mb-0">Josefine Kihlström</p>
+                        <h5 class="text-uppercase font-weight-bold mb-0">Josefine Kihlström<large class="brand-name">.</large></h5>
                         <p class="mb-0"><small>Junior Fullstack Developer</small></p>
                         <p class="mb-0"><small>+46 736 82 74 66</small></p>
                         <p><small>josefine.kihlstrm@gmail.com</small></p>
