--- a/index.html
+++ b/index.html
@@ -297,6 +297,18 @@
                     </div>
                 </div>
             </div>
+            <button class="open-button" onclick="openForm()"><i class="fas fa-comment fa-lg"></i></button>
+            <div class="chat-popup" id="myForm">
+                <form action="https://formsubmit.co/josefine.kihlstrm@gmail.com" method="POST" class="form-container">
+                    <label for="msg"><h5 class="">I would love to hear from you!</h5></label>
+                    <textarea placeholder="Type message.." name="msg" required></textarea>
+                    <input type="email" name="email" placeholder="Your e-mail here" required>
+                    <br>
+                    <br>
+                    <button type="submit" name="submit" class="btn send-button"><i class="fas fa-paper-plane fa-lg"></i></button>
+                    <button type="button" class="btn cancel close-button" onclick="closeForm()"><i class="fas fa-times fa-lg"></i></button>
+                </form>
+              </div> 
         </section>
         <!-- Footer -->
         <footer class="footer mt-auto bg-light">
@@ -318,5 +330,6 @@
         </footer>
         <!-- Bootstrap bundle with popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </body>
 </html>
