add hidden input to redirect aftr form sbmt

--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
                     <label for="msg"><h5 class="">I would love to hear from you!</h5></label>
                     <textarea placeholder="Type message.." name="msg" required></textarea>
                     <input type="email" name="email" placeholder="Your e-mail here" required>
+                    <input type="hidden" name="_next" value="https://josefinekihlstrom.github.io/resume/">
                     <br>
                     <br>
                     <button type="submit" name="submit" class="btn send-button"><i class="fas fa-paper-plane fa-lg"></i></button>
