--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         </section>
         <!-- Footer -->
         <footer class="footer mt-auto bg-light">
-            <div class="container footer-container">
+            <div class="container-fluid footer-container">
                 <div class="row no-gutters">
                     <div class="col-md-5 pt-5 pb-5 pl-5">
                         <h5 class="text-uppercase font-weight-bold mb-0">Josefine Kihlström<large class="brand-name">.</large></h5>
