--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
                             <span class="progress-type">SQL / NoSQL</span>
                         </div>
                         <br>
+                        <div class="progress">
+                            <div class="progress-bar bg-gradient" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">React (NEW and upcoming skill!)</span>
+                        </div>
+                        <br>
                     </div>
                 </div>
                 <!-- Work and education section -->
@@ -173,6 +180,10 @@
                                 <p>
                                     Figma
                                 </p>
+                                <i class="fas fa-star pb-3"></i>
+                                <p>
+                                    Flask
+                                </p>
                             </div>
                             <div class="col-6 skills-list">
                                 <p>
@@ -189,6 +200,10 @@
                                 <i class="fas fa-star pb-3"></i>
                                 <p>
                                     Balsamiq
+                                </p>
+                                <i class="fas fa-star pb-3"></i>
+                                <p>
+                                    Jinja
                                 </p>
                             </div>
                         </div>
@@ -207,6 +222,21 @@
                         <p class="font-weight-bold mb-0 text-uppercase">Handelsakademin</p>
                         <p>Visual Merchandiser</p>
                         <p class="">Certificate Issued June, 2016</p>
+                    </div>
+                </div>
+                <div class="row upcoming-row">
+                    <div class="col-12 mt-5 mb-5 text-center">
+                        <h4 class="text-uppercase">
+                            Upcoming:
+                        </h4>
+                        <hr class="hr-w">
+                        <br>
+                        <h5 class="mb-3">
+                            <strong class="text-white">NEW! <i class="fas fa-arrow-circle-right"></i></strong><strong class="text-uppercase"> Hack For Södertälje</strong> - Hackaton 5 - 6 Feb
+                        </h5>
+                        <h5>
+                            <strong class="text-white">NEW! <i class="fas fa-arrow-circle-right"></i></strong><strong class="text-uppercase"> React</strong> - course via freeCodeCamp.org 
+                        </h5>
                     </div>
                 </div>
                 <!-- Projects section -->
