change about img and add effects

--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
                 </div>
                 <!-- About row -->
                 <div class="row about-row" id="about-me">
-                    <div class="col-md-6 mt-5 mb-5 about-img">
-                        <img src="img/josefine.jpg" alt="image of Josefine" class="josefine-img">
+                    <div class="col-md-6 mt-5 mb-5 about-img about-container">
+                        <img src="img/josefine2.jpg" alt="image of Josefine" class="josefine-img">
+                        <div class="middle">
+                            <p class="text">
+                                <a href="tel:123-456-7890">
+                                    <i class="fas fa-phone"></i>
+                                    +46 736 82 74 66
+                                </a>
+                            </p>
+                        </div>
                     </div>
                     <div class="col-md-6 mt-5 mb-5 about-col">
                         <h4>
@@ -222,21 +230,6 @@
                         <p class="font-weight-bold mb-0 text-uppercase">Handelsakademin</p>
                         <p>Visual Merchandiser</p>
                         <p class="">Certificate Issued June, 2016</p>
-                    </div>
-                </div>
-                <div class="row upcoming-row">
-                    <div class="col-12 mt-5 mb-5 text-center">
-                        <h4 class="text-uppercase">
-                            Upcoming:
-                        </h4>
-                        <hr class="hr-w">
-                        <br>
-                        <h5 class="mb-3">
-                            <strong class="text-white">NEW! <i class="fas fa-arrow-circle-right"></i></strong><strong class="text-uppercase"> Hack For Södertälje</strong> - Hackaton 5 - 6 Feb
-                        </h5>
-                        <h5>
-                            <strong class="text-white">NEW! <i class="fas fa-arrow-circle-right"></i></strong><strong class="text-uppercase"> React</strong> - course via freeCodeCamp.org 
-                        </h5>
                     </div>
                 </div>
                 <!-- Projects section -->
