change form placeholders and text

--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
             <button class="open-button" onclick="openForm()"><i class="fas fa-comment fa-lg"></i></button>
             <div class="chat-popup" id="myForm">
                 <form action="https://formsubmit.co/josefine.kihlstrm@gmail.com" method="POST" class="form-container">
-                    <label for="msg"><h5 class="">I would love to hear from you!</h5></label>
-                    <textarea placeholder="Type message.." name="msg" required></textarea>
-                    <input type="email" name="email" placeholder="Your e-mail here" required>
+                    <label for="msg"><h5 class="text-center">Message me</h5></label>
+                    <textarea placeholder="Hello Josefine.." name="msg" required></textarea>
+                    <input type="email" name="email" placeholder="e-mail" required>
                     <input type="hidden" name="_next" value="https://josefinekihlstrom.github.io/resume/">
                     <br>
                     <br>
